--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,34 +7,6 @@
   align-items: center;
 }
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .title a {
   color: #0070f3;
   text-decoration: none;
@@ -48,18 +20,12 @@
 
 .title {
   margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 .title,
 .description {
   text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
 }
 
 .code {
@@ -72,11 +38,9 @@
 }
 
 .grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  columns: 8;
   flex-wrap: wrap;
-  max-width: 800px;
   margin-top: 3rem;
 }
 
