--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,89 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
+  font-family: Montserrat, "sans-serif";
   padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin: 0 auto;
+  background: #fff;
+  color: #333;
+}
+
+html {
+  padding: 0 1rem 1rem 1rem;
+}
+
+.centered {
+  max-width: 680px;
+  margin: auto;
+}
+
+
+li,
+p {
+  line-height: 1.5rem;
 }
 
 a {
+  font-weight: 500;
   color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+hr {
+  border: 1px solid #ddd;
 }
+
+iframe {
+  background: #ccc;
+  border: 1px solid #ccc;
+  height: 10rem;
+  width: 100%;
+  border-radius: 0.5rem;
+  filter: invert(1);
+}
+
+.column-1 {grid-column: 1;}
+.column-2 {grid-column: 2;}
+.column-3 {grid-column: 3;}
+.column-4 {grid-column: 4;}
+.column-5 {grid-column: 5;}
+.column-6 {grid-column: 6;}
+.column-7 {grid-column: 7;}
+
+.row-1 {grid-row: 1;}
+.row-2 {grid-row: 2;}
+.row-3 {grid-row: 3;}
+.row-4 {grid-row: 4;}
+.row-5 {grid-row: 5;}
+.row-7 {grid-row: 7;}
+.row-8 {grid-row: 8;}
+.row-9 {grid-row: 9;}
+.row-10 {grid-row: 10;}
+.row-11 {grid-row: 11;}
+.row-12 {grid-row: 12;}
+.row-13 {grid-row: 13;}
+.row-14 {grid-row: 14;}
+
+
+.Red:after{background-color: #ef9a9a !important;}
+.Pink:after{background-color: #f48fb1 !important;}
+.Purple:after{background-color: #ce93d8 !important;}
+.DeepPurple:after{background-color: #b39ddb !important;}
+.Indigo:after{background-color: #9fa8da !important;}
+.Blue:after{background-color: #90caf9 !important;}
+.LightBlue:after{background-color: #81d4fa !important;}
+.Cyan:after{background-color: #80deea !important;}
+.Teal:after{background-color: #80cbc4 !important;}
+.Green:after{background-color: #a5d6a7 !important;}
+.LightGreen:after{background-color: #c5e1a5 !important;}
+.Lime:after{background-color: #e6ee9c !important;}
+.Yellow:after{background-color: #fff59d !important;}
+.Amber:after{background-color: #ffe082 !important;}
+.Orange:after{background-color: #ffcc80 !important;}
+.DeepOrange:after{background-color: #ffab91 !important;}
+.Brown:after{background-color: #bcaaa4 !important;}
+.Grey:after{background-color: #eeeeee !important;}
+.BlueGrey:after{background-color: #b0bec5 !important;}
